--- a/index.html
+++ b/index.html
@@ -8,6 +8,24 @@
     <title>To Do List</title>
 </head>
 <body>
+    <div class="container">
+        <div class="tdList">
+            <div class="heading">
+                <h1></h1>
+            </div>
+            <div class="operation">
+                <button>Sort</button>
+                <input type="text">
+                <button>Add</button>
+            </div>
+            <div class="display">
+                <!-- <input type="checkbox" name="" id="">
+                banana
+                <button>X</button>
+            </input> -->
+        </div>
+        </div>
+    </div>
 
 
     <script src="./script/code.js"></script>
