--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
     <div class="container">
         <div class="tdList">
             <div class="heading">
-                <h1></h1>
+                <h1>TO-DO LIST</h1>
             </div>
             <div class="operation">
-                <button>Sort</button>
-                <input type="text">
-                <button>Add</button>
+                <button id="item-sort">Sort</button>
+                <input type="text" id="toDo-input" name="toDo-input" placeholder="Add items to your to-do list...">
+                <button id="add-item">Add</button>
             </div>
             <div class="display">
-                <!-- <input type="checkbox" name="" id="">
-                banana
-                <button>X</button>
+                <!-- <input type="checkbox" name="toDoList-item" id="toDoList-item">
+                <span>   banana   </span>
+                <button id="remove-item">X</button>
             </input> -->
         </div>
         </div>
